--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="border">#dddddd</color>
     <color name="background">#ffffff</color>
+    <color name="normal_text">#686565</color>
 </resources>
