--- a/app/src/main/res/layout/item_club_news.xml
+++ b/app/src/main/res/layout/item_club_news.xml
@@ -9,37 +9,36 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="352dp"
-        android:layout_height="212dp"
+        android:layout_width="300dp"
+        android:layout_height="180dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/app_name"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher_background"
+        android:scaleType="centerCrop"
+        android:src="@drawable/release_s"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="217dp"
+        android:layout_width="206dp"
         android:layout_height="77dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="12dp"
-        android:textSize="15sp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:gravity="center_vertical"
         android:text="@string/app_name"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image"
         tools:text="@android:string/untitled" />
 
     <TextView
         android:id="@+id/cont"
-        android:layout_width="322dp"
-        android:layout_height="170dp"
+        android:layout_width="304dp"
+        android:layout_height="172dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -56,14 +55,14 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="128dp"
+        android:layout_width="91dp"
         android:layout_height="76dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:scaleType="fitCenter"
+        android:src="@drawable/release_logo"
         app:layout_constraintEnd_toStartOf="@+id/title"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
