--- a/app/src/main/res/layout/main_test.xml
+++ b/app/src/main/res/layout/main_test.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20sp"
         android:background="@drawable/box"
+        app:layout_constrainedHeight="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
@@ -28,6 +29,7 @@
             android:id="@+id/bt_search"
             android:layout_width="wrap_content"
             android:layout_height="60sp"
+            android:layout_gravity="right"
             android:background="@color/background"
             android:scaleType="fitCenter"
             android:src="@drawable/bt_search"
