--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".TestActivity"
     tools:layout_editor_absoluteY="73dp">
 
     <LinearLayout
@@ -87,14 +86,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.636">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_bottom"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffeeee">
+            android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
