--- a/app/src/main/res/layout/main_test.xml
+++ b/app/src/main/res/layout/main_test.xml
@@ -80,13 +80,12 @@
         android:layout_width="match_parent"
         android:layout_height="60sp"
         android:layout_marginHorizontal="20sp"
-        android:background="#eeffdd"
+        android:layout_marginBottom="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_body"
         app:layout_constraintVertical_bias="0">
-
     </android.support.v7.widget.RecyclerView>
 
 
