--- a/app/src/main/res/drawable/round.xml
+++ b/app/src/main/res/drawable/round.xml
@@ -3,5 +3,11 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
+    <stroke
+        android:width="5dp"
+        android:color="@color/border" >
+    </stroke>
+    <solid
+        android:color="@color/white"/>
 
 </shape>
