--- a/app/src/main/res/layout/main_test.xml
+++ b/app/src/main/res/layout/main_test.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
@@ -8,17 +9,21 @@
     <LinearLayout
         android:id="@+id/search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60sp"
         android:layout_margin="20sp"
         android:background="@drawable/box"
+        android:gravity="center"
         app:layout_constrainedHeight="true"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="16dp">
 
         <EditText
             android:id="@+id/et_search"
             android:layout_width="wrap_content"
-            android:layout_height="60sp"
+            android:layout_height="wrap_content"
             android:hint="@string/search_hint"
             android:textSize="15sp"
             app:layout_constrainedWidth="true"
@@ -27,9 +32,9 @@
 
         <ImageButton
             android:id="@+id/bt_search"
-            android:layout_width="wrap_content"
-            android:layout_height="60sp"
-            android:layout_gravity="right"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:layout_gravity="center_vertical"
             android:background="@color/background"
             android:scaleType="fitCenter"
             android:src="@drawable/bt_search"
@@ -40,18 +45,44 @@
     <LinearLayout
         android:id="@+id/tag"
         android:layout_width="match_parent"
-        android:layout_height="60sp"
+        android:layout_height="50sp"
         android:layout_margin="20sp"
-        android:background="#ffeeee"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search"></LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/search">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/box"
+            android:text=" 공연 "
+            android:textSize="15sp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/box"
+            android:text=" 친목 "
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/box"
+            android:text=" 방송 "
+            android:textSize="15sp" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20sp"
         android:layout_marginHorizontal="20sp"
         android:text="오늘의 소식"
         android:textColor="@color/normal_text"
@@ -66,7 +97,6 @@
         android:id='@+id/rv_body'
         android:layout_width="match_parent"
         android:layout_height="0sp"
-        android:layout_marginHorizontal="20sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_bottom"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -77,15 +107,15 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_bottom"
+        android:background="@drawable/center_line"
         android:layout_width="match_parent"
-        android:layout_height="60sp"
-        android:layout_marginHorizontal="20sp"
-        android:layout_marginBottom="10sp"
+        android:layout_height="70sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_body"
         app:layout_constraintVertical_bias="0">
+
     </android.support.v7.widget.RecyclerView>
 
 
