--- a/app/src/main/res/layout/item_myclub.xml
+++ b/app/src/main/res/layout/item_myclub.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:id="@+id/logo"
         android:src="@drawable/release"
+        android:backgroundTint="@color/border"
         android:background="@drawable/round"
         android:layout_marginHorizontal="10sp"
         android:layout_width="50sp"
