--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,97 +4,119 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    tools:layout_editor_absoluteY="73dp">
+    android:background="@color/background">
 
     <LinearLayout
-        android:id="@+id/Title"
-        android:layout_margin="40sp"
-        android:background="@drawable/box"
+        android:id="@+id/search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="60sp"
+        android:layout_margin="20sp"
+        android:background="@drawable/box"
+        android:gravity="center"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="16dp">
 
         <EditText
-        android:id="@+id/et_search"
-        app:layout_constrainedWidth="true"
-        android:layout_height="50sp"
-        android:layout_width="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tag"
-        app:layout_constraintRight_toLeftOf="@+id/bt_search"
-        android:ems="10"
-        android:hint="@string/search_hint"
-        android:inputType="text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/et_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/search_hint"
+            android:textSize="15sp"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/bt_search" />
 
         <ImageButton
-        android:id="@+id/bt_search"
-        android:layout_width="30dp"
-        android:layout_height="35dp"
-        android:layout_gravity="right"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:background="#ffffff"
-        android:scaleType="fitCenter"
-        android:src="@drawable/bt_search"
-        app:layout_constraintBottom_toBottomOf="@+id/et_search"
-        app:layout_constraintRight_toLeftOf="@+id/et_search"
-        app:layout_constraintStart_toEndOf="@+id/et_search" />
-        </LinearLayout>
+            android:id="@+id/bt_search"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/background"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bt_search"
+            app:layout_constraintLeft_toRightOf="@+id/et_search"
+            app:layout_constraintRight_toRightOf="parent" />
+    </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="345dp"
-        android:layout_height="407dp"
-        android:layout_marginTop="12dp"
-        android:background="#ffeeee"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Title">
+        android:id="@+id/tag"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:layout_margin="20sp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search">
 
         <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="center_vertical"
-            android:text="오늘의 소식"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="56dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/box"
+            android:text=" 공연 "
+            android:textSize="15sp" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_body"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="horizontal">
 
-        </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/box"
+            android:text=" 친목 "
+            android:textSize="15sp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:background="@drawable/box"
+            android:text=" 방송 "
+            android:textSize="15sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="344dp"
-        android:layout_height="54dp"
-        android:gravity="left"
-        android:orientation="vertical"
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20sp"
+        android:layout_marginHorizontal="20sp"
+        android:text="오늘의 소식"
+        android:textColor="@color/normal_text"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/rv_body"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tag" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id='@+id/rv_body'
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_bottom"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_bottom"
+        android:background="@drawable/center_line"
+        android:layout_width="match_parent"
+        android:layout_height="70sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_body"
+        app:layout_constraintVertical_bias="0">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
+    </android.support.v7.widget.RecyclerView>
 
 
 </android.support.constraint.ConstraintLayout>
