--- a/app/src/main/res/layout/club_history.xml
+++ b/app/src/main/res/layout/club_history.xml
@@ -6,24 +6,21 @@
 
 
     <TextView
-        android:id="@+id/tv"
+        android:id="@+id/tv_title"
+        android:text="History"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"/>
 
-    <Button
-        android:id="@+id/bt_prev"
-        android:text="Prev"
-        app:layout_constraintTop_toBottomOf="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_club_history"
+        android:layout_width="0sp"
+        android:layout_height="0sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title">
 
-
-    <Button
-        android:id="@+id/bt_next"
-        android:text="Next"
-        app:layout_constraintTop_toBottomOf="@+id/bt_prev"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
