--- a/app/src/main/res/layout/club_main.xml
+++ b/app/src/main/res/layout/club_main.xml
@@ -77,10 +77,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/rv_body"/>
+        app:layout_constraintBottom_toTopOf="@+id/rv_club_member"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id='@+id/rv_body'
+        android:id="@+id/rv_club_member"
         android:layout_width="match_parent"
         android:layout_height="0sp"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -100,7 +100,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_body"
+        app:layout_constraintTop_toBottomOf="@+id/rv_club_member"
         app:layout_constraintVertical_bias="0">
 
     </android.support.v7.widget.RecyclerView>
