new Arii ( login page layout)

--- a/app/src/main/res/layout/item_myclub.xml
+++ b/app/src/main/res/layout/item_myclub.xml
@@ -4,9 +4,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
+    <!--android:src="@drawable/release"-->
     <ImageView
         android:id="@+id/logo"
-        android:src="@drawable/release"
         android:backgroundTint="@color/border"
         android:background="@drawable/round"
         android:layout_marginHorizontal="10sp"
