--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -85,7 +85,7 @@
         android:layout_marginBottom="20sp"
         android:layout_marginHorizontal="20sp"
         android:text="오늘의 소식"
-        android:textColor="@color/normal_text"
+        android:textColor="@color/mainColor"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/rv_club_member"
@@ -97,6 +97,7 @@
         android:id="@+id/rv_club_member"
         android:layout_width="match_parent"
         android:layout_height="0sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_bottom"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
